# posstat

./: .coderabbit.yaml  .gitignore  README.md  config.toml  posstat_design.md  pyproject.toml
output/: report.html
posstat/: __init__.py  __main__.py  aggregate.py  export.py  ginza_stage.py  mecab_stage.py  progress.py  reader.py  report_html.py
